# first-set

./: CMakeLists.txt  LICENSE  README.md  test.txt
include/: GrammarParser.hpp  InitialSets.hpp  PrintFunctions.hpp
src/: GrammarParser.cpp  InitialSets.cpp  PrintFunctions.cpp  main.cpp
