CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(FIRST-SET VERSION 1.0)

ENABLE_LANGUAGE(CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_CXX_FLAGS_DEBUG "-ggdb3 -O0 -Wall")
set(CMAKE_CXX_FLAGS_RELEASE "-g -O3 -Wall")

include_directories(include)

file(GLOB SOURCES src/*.cpp)

add_executable(FIRST-SET ${SOURCES})
